--- a/second.css
+++ b/second.css
@@ -1,7 +1,7 @@
 
 body{
     background-color: rgb(24,25,26);
-    font-family: Open Sans;
+    font-family: 'Open Sans';
     word-wrap: break-word;
 }
 *{
@@ -25,8 +25,7 @@ body{
     height: 65px;
     box-sizing: border-box;
     border-bottom: 1px solid rgb(60,61,62);
-    /* this below code is for giving shadow to the navigation bar */
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .navigationBar::-webkit-scrollbar-track{
   border-bottom: 1px solid black;
@@ -49,10 +48,9 @@ ul.topNav li a{
 }
 
 ul.topNav li a:hover{
-    background: #0a69aa;
+    border-bottom: 2px solid #0a69aa;
     color: white;
     box-sizing: border-box;
-    border-radius: 10px;
 }
 
 .brandLogo{
@@ -75,7 +73,7 @@ input.logOut{
     text-decoration: bold;
     line-height: 14px;
     float: right;
-    margin-right: -60%;
+    margin-right: -38%;
     margin-top: -0.4%;
     border-radius: 15px;
 }
@@ -86,167 +84,21 @@ input.logOut:hover{
     color: white;
 }
 button.blogSend{
-  color: white; 
+  color: white;
+  margin: 10% -1% -3.4% -1%; 
   box-sizing: border-box; 
   border-radius: 10px; 
   border: none; 
   padding: 12px; 
   width: 100%; 
   background-color: #0a69aa; 
-  font-size: 100%;
+  font-size: 100%; 
 }
 button.blogSend:hover{
-  background: rgb(60,61,62);
+  background: #0e80cc;
 }
 
-
-
-/* search bar finally */ 
-  
-  /* ============================ */
-  /* VARIABLES                    */
-  /* ============================ */
-  /* ============================ */
-  /* SEARCH BAR                   */
-  /* ============================ */
-  .search-container {
-    margin-left: 75px ;
-    margin-top: -4px;
-    width: 350px;
-    
-  }
-  
-  .search-box {
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 10px;
-    background-color: rgb(60,61,62);
-    height: 40px;
-    position: fixed;
-  }
-  
-  .search-icon {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    float: left;
-    width: 32px;
-    height: 40px;
-    color: #999;
-    font-size: 1.3em;
-    padding: 7px 15px;
-  }
-  
-  .search-input {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 368px;
-    height: 40px;
-    float: right;
-    background-color: transparent;
-    border: 0px;
-    padding: 10px;
-    text-transform: uppercase;
-    font-family: Open Sans;
-    font-size: 1em;
-    position: relative;
-    outline: 0px;
-  }
-  
-  @-webkit-keyframes fadeInTop {
-    0% {
-      opacity: 0;
-      -webkit-transform: translateY(-1.334em) translateZ(0);
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  @-moz-keyframes fadeInTop {
-    0% {
-      opacity: 0;
-      -moz-transform: translateY(-1.334em) translateZ(0);
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  @keyframes fadeInTop {
-    0% {
-      opacity: 0;
-      -webkit-transform: translateY(-1.334em) translateZ(0);
-      -moz-transform: translateY(-1.334em) translateZ(0);
-      -ms-transform: translateY(-1.334em) translateZ(0);
-      -o-transform: translateY(-1.334em) translateZ(0);
-      transform: translateY(-1.334em) translateZ(0);
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  .search-results {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    z-index: 999;
-    width: 368px;
-    max-height: 200px;
-    overflow: scroll;
-    top: 40px;
-    left: 32px;
-    text-align: left;
-  }
-  .search-results li {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 10px;
-    height: 40px;
-    background-color: #9BC788;
-    color: white;
-    font-weight: bold;
-    /* ANIMATION */
-    /* remove this part if you dont like the animation */
-    /* END OF ANIMATION */
-  }
-  .search-results li:hover {
-    background-color: #87bc70;
-    cursor: pointer;
-  }
-  .search-results li:nth-child(1) {
-    /* Animation */
-    -webkit-animation: fadeInTop 0.4s 0s forwards;
-    animation: fadeInTop 0.4s 0s forwards;
-    opacity: 0;
-  }
-  .search-results li:nth-child(2) {
-    /* Animation */
-    -webkit-animation: fadeInTop 0.4s 0.1s forwards;
-    animation: fadeInTop 0.4s 0.1s forwards;
-    opacity: 0;
-  }
-  .search-results li:nth-child(3) {
-    /* Animation */
-    -webkit-animation: fadeInTop 0.4s 0.2s forwards;
-    animation: fadeInTop 0.4s 0.2s forwards;
-    opacity: 0;
-  }
-  .search-results li:nth-child(4) {
-    /* Animation */
-    -webkit-animation: fadeInTop 0.4s 0.3s forwards;
-    animation: fadeInTop 0.4s 0.3s forwards;
-    opacity: 0;
-  }
-  .search-results li:nth-child(5) {
-    /* Animation */
-    -webkit-animation: fadeInTop 0.4s 0.4s forwards;
-    animation: fadeInTop 0.4s 0.4s forwards;
-    opacity: 0;
-  }
-
-  /*material icons */
+  /*material icons Google icons */
 .material-icons {
     font-family: 'Material Icons';
     font-weight: normal;
@@ -308,14 +160,16 @@ button.blogSend:hover{
     /* box-shadow: 0 15px 8px 0 #0a69aa, 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 
-.nrtBoxes, .Boxes{
-  box-sizing: border-box;
+
+.nrtBoxes{
+  box-sizing: border-box; 
   margin: 2% auto 2% auto;
   width: 590px;
   height: auto;
-  border-radius: 10px;
-  background-color: white;
   padding: 20px;
+  border-radius: 10px;
+  background-color: rgb(36,37,38); 
+  overflow: hidden;
 }
 
 .profilePic {
@@ -327,15 +181,12 @@ button.blogSend:hover{
   background-size: cover;
   background-position: center;
   background-blend-mode: multiply;
-  color: transparent;
-  transition: all .3s ease;
 }
 
 .profilePic:hover {
     background-color: rgba(0,0,0,.5);
     z-index: 10000;
     color: rgba(250,250,250,1);
-    transition: all .3s ease;
   }
 
 .myFriends{
@@ -345,20 +196,41 @@ button.blogSend:hover{
   margin: -16px 0 0 0;
 }
 
-#gre, #ree{
-  color: white;  
-  background-color: rgb(36,37,38);
-  border: 1px solid rgb(60,61,62) ;
-  border-radius: 50%;
-  height: 40px;
-  width: 40px;
-  
+.like__btn {
+  padding: 5px 5px;
+  background: #0a69aa;
+  font-size: 15px;
+  font-family: "Open Sans", sans-serif;
+  border-radius: 5px;
+  color: #e8efff;
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
 
-#gre:hover{
-  background: green;
+.like__btn:hover{
+  background: #0e80cc;
+
 }
 
-#ree:hover{
-  background: red;
+.ppp{
+  width: 99.3%;
+  padding: 12px;
+  border: 1px solid grey;
+  border-radius: 12px;
+  font-size: 17px;
+  margin-top: 7px;
+  outline: none;
+}
+.fBox{
+  border: 1px solid rgb(36,37,38); 
+  border-radius: 10px; 
+  background-color: rgb(36,37,38); 
+  padding: 10px; margin: 10px;
+}
+.friends{
+  color: rgb(170,171,172); 
+  font-size: 25px; 
+  font-family: 'Open Sans'; 
+  margin: 0 0 0 2px; 
 }
